# FSAE-Autonomous-Vehicle-Project

./: README.md
CARLA/: attach_lidar_to_vehicle.py  detect_cones.py  detect_cones_based_on_color.py  detect_cones_based_shape.py  detect_cones_camera.py  detect_cones_only_blue.py  detect_cones_red_green_orange.py  detect_cones_shape_intensity.py  detect_cones_test.py  lidar_setup.py  simulate_cones.py  verify_pandar40.py
Cone_Detection/: detect_cones_0505.py  detect_cones_camera.py
Cone_Detection/launch/: detect_cones.launch
Point Cloud Library/: CMakeLists.txt  point_cloud_processor.cpp
